--- a/include/cilk/ReadMe.html
+++ b/include/cilk/ReadMe.html
@@ -46,7 +46,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head>
-    <title>Building the Intel Cilk Plus Include Directory Documentation</title>
+    <title>Building the Intel(R) Cilk(TM) Plus Include Directory Documentation</title>
 </head>
 <body>
 <h1>Building the Intel Cilk Plus API and Reducer Documentation</h1>
